# envpeek

./: README.md  pyproject.toml
src/envpeek/: cli.py
tests/: test_cli.py
